<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainHandler"
            type="com.rex.touchscreentest.handler.MainHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

        <Button
            android:id="@+id/btn_start_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_test"
            android:onClick="@{(view) -> mainHandler.startTest(view)}"
            app:layout_constraintBottom_toTopOf="@+id/btn_test_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_test_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_test_2"
            android:onClick="@{(view) -> mainHandler.notReady(view)}"
            app:layout_constraintBottom_toTopOf="@+id/btn_test_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_test" />

        <Button
            android:id="@+id/btn_test_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_test_3"
            android:onClick="@{(view) -> mainHandler.notReady(view)}"
            app:layout_constraintBottom_toTopOf="@+id/btn_test_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_test_2" />

        <Button
            android:id="@+id/btn_test_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_test_4"
            android:onClick="@{(view) -> mainHandler.notReady(view)}"
            app:layout_constraintBottom_toTopOf="@+id/btn_exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_test_3" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_exit"
            android:onClick="@{(view) -> mainHandler.exit(view)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_test_4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>